--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Home - Decofresas</title>
 </head>
-<body>
+<body >
     <!-- banner principal -->
     <header>
-        <div id="arriba">
-            <div class="logo">
+        <div id="top">
+            <div class="top__logo">
                 <a href="index.html"><img class="logo__img-principal" src="img/fresa-header.png" alt="imagen de logo de decofresas"></a>
                 <a href="index.html"><h1 class="logo__titulo">Decofresas</h1></a>
             </div>
-            <nav class="menu"> 
+            <nav class="top__menu"> 
                 <ul class="menu__lista">
                     <li>
                         <a href="pages/nosotros.html">Nosotros</a>
@@ -41,20 +41,28 @@
     </header>
     <!-- contenido principal -->
     <main>
-        <img src="img/decofresas-3.jpg" alt="imagen principal home">      
-        <div class="fondo-fucsia">
-            <h2>Envios en CABA y GBA</h2>
-            <img src="img/envios.png" alt="logo de envios">
-        </div>
+        <h2 id="arriba">
+            home
+        </h2>
+        <section class="home-seccion1">
+            <img src="img/home.1.jpg" alt="foto de fresas">
+        </section>  
+        <section class="home-seccion2">
+            <p>Envíos toda CABA y parte de GBA</p>
+            <img src="img/envios.png" alt="imagen de envios">
+        </section>
     </main>
     <!-- pie de pagina -->
     <footer>
+        <div class="whatsapp">
+            <a href="https://wa.me/5491130516222" target="_blank"><img src="img/wp-logo.png" alt="logo de whatsapp"></a>
+        </div>
         <div id="abajo">
           <h3 class="abajo__mensaje">© 2023 DecoFresas, todos los derechos reservados.</h3>
           <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="abajo__logoIG" src="img/instagram-logo.png" alt="imagen de logo instagram"></a>
-          <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class= "abajo__logoFb" src="img/facebook-logo.png" alt="imagen de logo facebook"></a> 
+          <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class= "abajo__logoFB" src="img/facebook-logo.png" alt="imagen de logo facebook"></a> 
         </div>
-        <div class="botom">
+        <div class="volver-arriba">
             <a href="#arriba">volver arriba</a>
         </div>
     </footer> 
