--- a/pages/productos.html
+++ b/pages/productos.html
@@ -13,12 +13,12 @@
 <body>
     <!-- banner principal -->
     <header>
-        <div id="arriba">
-            <div class="logo">
+        <div id="top">
+            <div class="top__logo">
                 <a href="../index.html"><img class="logo__img-principal" src="../img/fresa-header.png" alt="imagen de logo de decofresas"></a>
                 <a href="../index.html"><h1 class="logo__titulo">Decofresas</h1></a>
             </div>
-            <nav class="menu"> 
+            <nav class="top__menu"> 
                 <ul class="menu__lista">
                     <li>
                         <a href="../pages/nosotros.html">Nosotros</a>
@@ -39,36 +39,44 @@
             <p>Hacemos únicos tus momentos especiales</p>
         </div>
     </header>
-       <!-- contenido principal -->
+    <!-- contenido principal -->
     <main>
-        <h1>Productos</h1>
-        <div>
-            <div>
-                <a href="../img/classic-boxes.jpeg"><img src="../img/classic-boxes.jpeg" alt="imagen Classic boxes"></a>
-                <h3>Classic Boxes</h3>
+        <h2 id="arriba">
+            home > productos
+        </h2>
+        <section class="productos-seccion1">
+            <h3>
+                Productos
+            </h3>
+            <div class="productos-seccion1__prod">
+                <div>
+                    <img src="../img/classic-boxes.jpeg" alt="imagen classic boxes">
+                    <h4>Classic Boxes</h4>
+                </div>
+                <div>
+                    <img src="../img/deluxe-boxes.jpg" alt="imagen deluxe boxes">
+                    <h4>Deluxe Boxes</h4>
+                </div>
+                <div>
+                    <img src="../img/custom-boxes.jpg" alt="imagen custom boxes">
+                    <h4>Custom Boxes</h4>
+                </div>
             </div>
-            <div>
-                <a href="../img/deluxe-boxes.jpg"><img src="../img/deluxe-boxes.jpg" alt="imagen Deluxe boxes"></a>
-                <h3>Deluxe Boxes</h3>
-            </div>
-            <div>
-                <a href="../img/custom-boxes.jpg"><img src="../img/custom-boxes.jpg" alt="imagen Custom boxes"></a>
-                <h3>Custom Boxes</h3>
-            </div>
-        </div> 
+        </section>
     </main>
-    <!-- pie de pagina -->
-    <footer>
-        <div>
-          <h3>© 2023 DecoFresas, todos los derechos reservados.</h3>  
+       <!-- pie de pagina -->
+       <footer>
+        <div class="whatsapp">
+            <a href="https://wa.me/5491130516222" target="_blank"><img src="../img/wp-logo.png" alt="logo de whatsapp"></a>
         </div>
-        <div>
-            <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="logo-ig" src="../img/instagram-logo.png" alt="imagen de logo instagram"></a>
-            <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class= "logo-fb" src="../img/facebook-logo.png" alt="imagen de logo facebook"></a>   
+        <div id="abajo">
+          <h3 class="abajo__mensaje">© 2023 DecoFresas, todos los derechos reservados.</h3>
+          <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="abajo__logoIG" src="../img/instagram-logo.png" alt="imagen de logo instagram"></a>
+          <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class= "abajo__logoFB" src="../img/facebook-logo.png" alt="imagen de logo facebook"></a> 
         </div>
-        <div>
+        <div class="volver-arriba">
             <a href="#arriba">volver arriba</a>
         </div>
-    </footer> 
+    </footer>
 </body>
 </html>
