Cambios responsive 3era entrega

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                 </ul>
             </nav>
         </div>
-        <div class="mensaje">
-            <p>Hacemos únicos tus momentos especiales</p>
+        <div class="mensaje-container">
+            <div class="mensaje">
+                Hacemos únicos tus momentos especiales  
+            </div>
         </div>
     </header>
     <!-- contenido principal -->
@@ -54,6 +56,9 @@
     </main>
     <!-- pie de pagina -->
     <footer>
+        <div class="whatsapp">
+            <a href="https://wa.me/5491130516222" target="_blank"><img src="img/wp-logo.png" alt="logo de whatsapp"></a>
+        </div>
         <div class="whatsapp">
             <a href="https://wa.me/5491130516222" target="_blank"><img src="img/wp-logo.png" alt="logo de whatsapp"></a>
         </div>
