--- a/pages/productos.html
+++ b/pages/productos.html
@@ -11,35 +11,37 @@
     <title>Productos - Decofresas</title>
 </head>
 <body>
-    <!-- banner principal -->
-    <header>
-        <div id="top">
-            <div class="top__logo">
-                <a href="../index.html"><img class="logo__img-principal" src="../img/fresa-header.png" alt="imagen de logo de decofresas"></a>
-                <a href="../index.html"><h1 class="logo__titulo">Decofresas</h1></a>
-            </div>
-            <nav class="top__menu"> 
-                <ul class="menu__lista">
-                    <li>
-                        <a href="../pages/nosotros.html">Nosotros</a>
-                    </li>
-                    <li>
-                        <a href="../pages/productos.html">Productos</a>
-                    </li>
-                    <li>
-                        <a href="../pages/galeria.html">Galeria</a>
-                    </li>
-                    <li>
-                        <a href="../pages/contacto.html">Contacto</a>
-                    </li>
-                </ul>
-            </nav>
+   <!-- banner principal -->
+   <header>
+    <div id="top">
+        <div class="top__logo">
+            <a href="../index.html"><img class="logo__img-principal" src="../img/fresa-header.png" alt="imagen de logo de decofresas"></a>
+            <a href="../index.html"><h1 class="logo__titulo">Decofresas</h1></a>
         </div>
+        <nav class="top__menu"> 
+            <ul class="menu__lista">
+                <li>
+                    <a href="../pages/nosotros.html">Nosotros</a>
+                </li>
+                <li>
+                    <a href="../pages/productos.html">Productos</a>
+                </li>
+                <li>
+                    <a href="../pages/galeria.html">Galeria</a>
+                </li>
+                <li>
+                    <a href="../pages/contacto.html">Contacto</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="mensaje-container">
         <div class="mensaje">
-            <p>Hacemos únicos tus momentos especiales</p>
+            Hacemos únicos tus momentos especiales  
         </div>
-    </header>
-    <!-- contenido principal -->
+    </div>
+</header>
+<!-- contenido principal -->
     <main>
         <h2 id="arriba">
             home > productos
