--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,35 +11,37 @@
     <title>Nosotros - Decofresas</title>
 </head>
 <body>
-    <!-- banner principal -->
-    <header>
-        <div id="top">
-            <div class="top__logo">
-                <a href="../index.html"><img class="logo__img-principal" src="../img/fresa-header.png" alt="imagen de logo de decofresas"></a>
-                <a href="../index.html"><h1 class="logo__titulo">Decofresas</h1></a>
-            </div>
-            <nav class="top__menu"> 
-                <ul class="menu__lista">
-                    <li>
-                        <a href="../pages/nosotros.html">Nosotros</a>
-                    </li>
-                    <li>
-                        <a href="../pages/productos.html">Productos</a>
-                    </li>
-                    <li>
-                        <a href="../pages/galeria.html">Galeria</a>
-                    </li>
-                    <li>
-                        <a href="../pages/contacto.html">Contacto</a>
-                    </li>
-                </ul>
-            </nav>
+   <!-- banner principal -->
+   <header>
+    <div id="top">
+        <div class="top__logo">
+            <a href="../index.html"><img class="logo__img-principal" src="../img/fresa-header.png" alt="imagen de logo de decofresas"></a>
+            <a href="../index.html"><h1 class="logo__titulo">Decofresas</h1></a>
         </div>
+        <nav class="top__menu"> 
+            <ul class="menu__lista">
+                <li>
+                    <a href="../pages/nosotros.html">Nosotros</a>
+                </li>
+                <li>
+                    <a href="../pages/productos.html">Productos</a>
+                </li>
+                <li>
+                    <a href="../pages/galeria.html">Galeria</a>
+                </li>
+                <li>
+                    <a href="../pages/contacto.html">Contacto</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="mensaje-container">
         <div class="mensaje">
-            <p>Hacemos únicos tus momentos especiales</p>
+            Hacemos únicos tus momentos especiales  
         </div>
-    </header>
-    <!-- contenido principal -->
+    </div>
+</header>
+<!-- contenido principal -->
     <main>
         <h2 id="arriba">
             home > nosotros
@@ -52,7 +54,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in eius, iste amet esse perspiciatis molestias similique magnam quia ab laudantium aperiam velit, ex qui optio doloremque sequi odio corporis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo odit exercitationem velit est aspernatur rem beatae voluptatum voluptatibus quod cum dolorum blanditiis assumenda, repudiandae aliquam. Quos veritatis hic at eligendi?</p>
             </div>
             <div class="nosotros-seccion1__video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ok1pQmFmYFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="320" height="315" src="https://www.youtube.com/embed/ok1pQmFmYFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
         <section class="nosotros-seccion2">
