Cambios 3era. entrega

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -51,7 +51,8 @@
                 <h3>
                     Nosotros
                 </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in eius, iste amet esse perspiciatis molestias similique magnam quia ab laudantium aperiam velit, ex qui optio doloremque sequi odio corporis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo odit exercitationem velit est aspernatur rem beatae voluptatum voluptatibus quod cum dolorum blanditiis assumenda, repudiandae aliquam. Quos veritatis hic at eligendi?</p>
+                <p>Somos un emprendimiento que se dedica a la venta de fresas decoradas con chocolate en Argentina. Todo comenzó en medio de la pandemia, cuando nos dimos cuenta de que muchas personas estaban buscando maneras de disfrutar de la vida y celebrar los pequeños momentos en casa.</p>
+                <p>Nos apasiona la calidad de los ingredientes y la creatividad en la presentación de nuestros productos. Por eso, nos esforzamos por utilizar solo fresas frescas y chocolate de alta calidad en nuestras decoraciones. Además, nos encanta experimentar con diferentes diseños y colores para crear productos visualmente atractivos que sorprendan a nuestros clientes.</p>
             </div>
             <div class="nosotros-seccion1__video">
                 <iframe width="320" height="315" src="https://www.youtube.com/embed/ok1pQmFmYFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
