--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link de tipografía -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap" rel="stylesheet">
+    <!-- link de mi bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- link de mi css -->
     <link rel="stylesheet" href="css/main.css">
     <title>Home - Decofresas</title>
@@ -13,55 +15,69 @@
 <body >
     <!-- banner principal -->
     <header>
-        <div id="top">
-            <div class="top__logo">
-                <a href="index.html"><img class="logo__img-principal" src="img/fresa-header.png" alt="imagen de logo de decofresas"></a>
-                <a href="index.html"><h1 class="logo__titulo">Decofresas</h1></a>
+        <nav class="navbar fixed-top navbar-expand-lg" style="background-color: #FFDDEE;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/fresa-header.png" alt="logo de fresa" width="50" height="50" class="d-inline-block align-text-top">
+                    Decofresas
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/nosotros.html">nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/productos.html">productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/galeria.html">galeria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/contacto.html">contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <nav class="top__menu"> 
-                <ul class="menu__lista">
-                    <li>
-                        <a href="pages/nosotros.html">Nosotros</a>
-                    </li>
-                    <li>
-                        <a href="pages/productos.html">Productos</a>
-                    </li>
-                    <li>
-                        <a href="pages/galeria.html">Galeria</a>
-                    </li>
-                    <li>
-                        <a href="pages/contacto.html">Contacto</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div class="mensaje-container">
+        </nav>
+    </header>
+    <!-- contenido principal -->
+    <main>
+        <div id= arriba class="mensaje-container">
             <div class="mensaje">
                 Hacemos únicos tus momentos especiales  
             </div>
         </div>
-    </header>
-    <!-- contenido principal -->
-    <main>
-        <h2 id="arriba">
-            home
-        </h2>
-        <section class="home-seccion1">
-            <img src="img/home.1.jpg" alt="foto de fresas">
-        </section>  
-        <section class="home-seccion2">
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/home-uno.jpg" class="d-block w-100" alt="foto fresas uno">
+              </div>
+              <div class="carousel-item">
+                <img src="img/home-dos.jpg" class="d-block w-100" alt="foto fresas dos">
+              </div>
+              <div class="carousel-item">
+                <img src="img/home-tres.jpg" class="d-block w-100" alt="foto fresas tres">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <section class="seccion-dos">
             <p>Envíos toda CABA y parte de GBA</p>
             <img src="img/envios.png" alt="imagen de envios">
         </section>
     </main>
     <!-- pie de pagina -->
     <footer>
-        <div class="whatsapp">
-            <a href="https://wa.me/5491130516222" target="_blank"><img src="img/wp-logo.png" alt="logo de whatsapp"></a>
-        </div>
-        <div class="whatsapp">
-            <a href="https://wa.me/5491130516222" target="_blank"><img src="img/wp-logo.png" alt="logo de whatsapp"></a>
-        </div>
+        <a href="https://wa.me/5491130516222" target="_blank" class="whatsapp"><img src="img/wp-logo.png" alt="logo de whatsapp"></a>
         <div id="abajo">
           <h3 class="abajo__mensaje">© 2023 DecoFresas, todos los derechos reservados.</h3>
           <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="abajo__logoIG" src="img/instagram-logo.png" alt="imagen de logo instagram"></a>
@@ -70,6 +86,8 @@
         <div class="volver-arriba">
             <a href="#arriba">volver arriba</a>
         </div>
-    </footer> 
+    </footer>
+    <!-- link de mi js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
