--- a/index.html
+++ b/index.html
@@ -49,16 +49,21 @@
                 Hacemos únicos tus momentos especiales  
             </div>
         </div>
+        <div class="titulos">
+            <h1>
+                Home
+            </h1>
+        </div>
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/home-uno.jpg" class="d-block w-100" alt="foto fresas uno">
+                <img src="img/home-uno.jpg" class="d-block w-100 h-100" alt="foto fresas uno">
               </div>
               <div class="carousel-item">
-                <img src="img/home-dos.jpg" class="d-block w-100" alt="foto fresas dos">
+                <img src="img/home-dos.jpg" class="d-block w-100 h-100" alt="foto fresas dos">
               </div>
               <div class="carousel-item">
-                <img src="img/home-tres.jpg" class="d-block w-100" alt="foto fresas tres">
+                <img src="img/home-tres.jpg" class="d-block w-100 h-100" alt="foto fresas tres">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -72,19 +77,37 @@
         </div>
         <section class="seccion-dos">
             <p>Envíos toda CABA y parte de GBA</p>
-            <img src="img/envios.png" alt="imagen de envios">
         </section>
     </main>
     <!-- pie de pagina -->
     <footer>
-        <a href="https://wa.me/5491130516222" target="_blank" class="whatsapp"><img src="img/wp-logo.png" alt="logo de whatsapp"></a>
-        <div id="abajo">
-          <h3 class="abajo__mensaje">© 2023 DecoFresas, todos los derechos reservados.</h3>
-          <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="abajo__logoIG" src="img/instagram-logo.png" alt="imagen de logo instagram"></a>
-          <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class= "abajo__logoFB" src="img/facebook-logo.png" alt="imagen de logo facebook"></a> 
+        <div class="whatsapp">
+            <a href="https://wa.me/5491130516222" target="_blank"><img src="img/wp-logo.png" alt="logo de whatsapp"></a>
         </div>
-        <div class="volver-arriba">
-            <a href="#arriba">volver arriba</a>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <p>Síguenos en nuestras redes sociales:</p>
+            </div>
+            <div class="col-md-4">
+              <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class="logoFB" src="img/facebook-logo.png" alt="Logo de Facebook"></a>
+            </div>
+            <div class="col-md-4">
+              <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="logoIG" src="img/instagram-logo.png" alt="Logo de Instagram"></a>
+            </div>
+          </div>
+          <ul class="menu-footer">
+            <li><a href="index.html">home</a>
+            </li>
+            <li><a href="pages/nosotros.html">nosotros</a>
+            </li>
+            <li><a href="pages/productos.html">productos</a>
+            </li>
+            <li><a href="pages/galeria.html">galeria</a>
+            </li>
+            <li><a href="pages/contacto.html">contacto</a>
+            </li>
+        </ul>
         </div>
     </footer>
     <!-- link de mi js -->
