--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -48,6 +48,12 @@
             <div class="mensaje">
                 Hacemos únicos tus momentos especiales  
             </div>
+        </div>
+        <div class="titulos">
+            <h1>
+                Galeria
+            </h1>
+        </div>
         <section class="galeria">
             <div class="galeria__img-uno">
                 <img src="../img/galeria-classic1.jpg" alt="Imagen classic uno">
@@ -66,18 +72,35 @@
             </div>
         </section>
     </main>
-       <!-- pie de pagina -->
-       <footer>
+    <!-- pie de pagina -->
+    <footer>
         <div class="whatsapp">
             <a href="https://wa.me/5491130516222" target="_blank"><img src="../img/wp-logo.png" alt="logo de whatsapp"></a>
         </div>
-        <div id="abajo">
-          <h3 class="abajo__mensaje">© 2023 DecoFresas, todos los derechos reservados.</h3>
-          <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="abajo__logoIG" src="../img/instagram-logo.png" alt="imagen de logo instagram"></a>
-          <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class= "abajo__logoFB" src="../img/facebook-logo.png" alt="imagen de logo facebook"></a> 
-        </div>
-        <div class="volver-arriba">
-            <a href="#arriba">volver arriba</a>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <p>Síguenos en nuestras redes sociales:</p>
+            </div>
+            <div class="col-md-4">
+              <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class="logoFB" src="../img/facebook-logo.png" alt="Logo de Facebook"></a>
+            </div>
+            <div class="col-md-4">
+              <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="logoIG" src="../img/instagram-logo.png" alt="Logo de Instagram"></a>
+            </div>
+          </div>
+          <ul class="menu-footer">
+            <li><a href="../index.html">home</a>
+            </li>
+            <li><a href="../pages/nosotros.html">nosotros</a>
+            </li>
+            <li><a href="../pages/productos.html">productos</a>
+            </li>
+            <li><a href="../pages/galeria.html">galeria</a>
+            </li>
+            <li><a href="../pages/contacto.html">contacto</a>
+            </li>
+        </ul>
         </div>
     </footer>
     <!-- link de mi js -->
