--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -48,11 +48,14 @@
             <div class="mensaje">
                 Hacemos únicos tus momentos especiales  
             </div>
+        </div>
+        <div class="titulos">
+            <h1>
+                Nosotros
+            </h1>
+        </div>
         <section class="nosotros-seccion1">
             <div class="nosotros-seccion1__nosotros">
-                <h3>
-                    Nosotros
-                </h3>
                 <p>Somos un emprendimiento que se dedica a la venta de fresas decoradas con chocolate en Argentina. Todo comenzó en medio de la pandemia, cuando nos dimos cuenta de que muchas personas estaban buscando maneras de disfrutar de la vida y celebrar los pequeños momentos en casa.</p>
                 <p>Nos apasiona la calidad de los ingredientes y la creatividad en la presentación de nuestros productos. Por eso, nos esforzamos por utilizar solo fresas frescas y chocolate de alta calidad en nuestras decoraciones. Además, nos encanta experimentar con diferentes diseños y colores para crear productos visualmente atractivos que sorprendan a nuestros clientes.</p>
             </div>
@@ -77,18 +80,35 @@
             </div>
         </section>
     </main>
-       <!-- pie de pagina -->
+    <!-- pie de pagina -->
     <footer>
         <div class="whatsapp">
             <a href="https://wa.me/5491130516222" target="_blank"><img src="../img/wp-logo.png" alt="logo de whatsapp"></a>
         </div>
-        <div id="abajo">
-          <h3 class="abajo__mensaje">© 2023 DecoFresas, todos los derechos reservados.</h3>
-          <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="abajo__logoIG" src="../img/instagram-logo.png" alt="imagen de logo instagram"></a>
-          <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class= "abajo__logoFB" src="../img/facebook-logo.png" alt="imagen de logo facebook"></a> 
-        </div>
-        <div class="volver-arriba">
-            <a href="#arriba">volver arriba</a>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <p>Síguenos en nuestras redes sociales:</p>
+            </div>
+            <div class="col-md-4">
+              <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class="logoFB" src="../img/facebook-logo.png" alt="Logo de Facebook"></a>
+            </div>
+            <div class="col-md-4">
+              <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="logoIG" src="../img/instagram-logo.png" alt="Logo de Instagram"></a>
+            </div>
+          </div>
+          <ul class="menu-footer">
+            <li><a href="../index.html">home</a>
+            </li>
+            <li><a href="../pages/nosotros.html">nosotros</a>
+            </li>
+            <li><a href="../pages/productos.html">productos</a>
+            </li>
+            <li><a href="../pages/galeria.html">galeria</a>
+            </li>
+            <li><a href="../pages/contacto.html">contacto</a>
+            </li>
+        </ul>
         </div>
     </footer>
     <!-- link de mi js -->
