--- a/pages/productos.html
+++ b/pages/productos.html
@@ -48,38 +48,73 @@
             <div class="mensaje">
                 Hacemos únicos tus momentos especiales  
             </div>
-        <section class="productos-seccion1">
-            <h3>
+        </div>
+        <div class="titulos">
+            <h1>
                 Productos
-            </h3>
-            <div class="productos-seccion1__prod">
-                <div>
-                    <img src="../img/classic-boxes.jpeg" alt="imagen classic boxes">
-                    <h4>Classic Boxes</h4>
+            </h1>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="thumbnail">                            <img src="../img/box-london.jpg" class= "producto-item" alt="imagen descripcion de classic boxes">
+                        <div class="caption">
+                            <h3>Box London</h3>
+                            <p>8 frutillas decoradas a tu gusto acompañado por 1 botella de Chamdon 187ml, 12 Ferrero Rocher y flores de temporada.</p>
+                            <p><a href="https://wa.me/5491130516222" class="btn btn-primary" role="button">Contáctanos</a></p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <img src="../img/deluxe-boxes.jpg" alt="imagen deluxe boxes">
-                    <h4>Deluxe Boxes</h4>
+                <div class="col-sm-4">
+                    <div class="thumbnail">
+                        <img src="../img/box-grecia.jpg" class= "producto-item" alt="imagen descripcion de box grecia">
+                        <div class="caption">
+                            <h3>Box Grecia</h3>                                <p>8 frutillas decoradas a tu gusto acompañado por 1 botella de Chamdon 187ml y 1 chocolate.</p>
+                            <p><a href="https://wa.me/5491130516222" class="btn btn-primary" role="button">Contáctanos</a></p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <img src="../img/custom-boxes.jpg" alt="imagen custom boxes">
-                    <h4>Custom Boxes</h4>
+                <div class="col-sm-4">
+                    <div class="thumbnail">
+                        <img src="../img/box-venecia.jpg" class= "producto-item" alt="imagen descripcion de box venecia">
+                        <div class="caption">                                <h3>Box Venecia</h3>
+                            <p>8 frutillas decoradas a tu gusto acompañado por 6 rosas y 12 ferrero rocher.</p>
+                            <p><a href="https://wa.me/5491130516222" class="btn btn-primary" role="button">Contáctanos</a></p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
-       <!-- pie de pagina -->
-       <footer>
+    <!-- pie de pagina -->
+    <footer>
         <div class="whatsapp">
             <a href="https://wa.me/5491130516222" target="_blank"><img src="../img/wp-logo.png" alt="logo de whatsapp"></a>
         </div>
-        <div id="abajo">
-          <h3 class="abajo__mensaje">© 2023 DecoFresas, todos los derechos reservados.</h3>
-          <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="abajo__logoIG" src="../img/instagram-logo.png" alt="imagen de logo instagram"></a>
-          <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class= "abajo__logoFB" src="../img/facebook-logo.png" alt="imagen de logo facebook"></a> 
-        </div>
-        <div class="volver-arriba">
-            <a href="#arriba">volver arriba</a>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <p>Síguenos en nuestras redes sociales:</p>
+            </div>
+            <div class="col-md-4">
+              <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class="logoFB" src="../img/facebook-logo.png" alt="Logo de Facebook"></a>
+            </div>
+            <div class="col-md-4">
+              <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="logoIG" src="../img/instagram-logo.png" alt="Logo de Instagram"></a>
+            </div>
+          </div>
+          <ul class="menu-footer">
+            <li><a href="../index.html">home</a>
+            </li>
+            <li><a href="../pages/nosotros.html">nosotros</a>
+            </li>
+            <li><a href="../pages/productos.html">productos</a>
+            </li>
+            <li><a href="../pages/galeria.html">galeria</a>
+            </li>
+            <li><a href="../pages/contacto.html">contacto</a>
+            </li>
+        </ul>
         </div>
     </footer>
     <!-- link de mi js -->
