--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -48,105 +48,106 @@
             <div class="mensaje">
                 Hacemos únicos tus momentos especiales  
             </div>
-        <section class="contacto-seccion1">
-            <h3>
+        </div>
+        <div class="titulos">
+            <h1>
                 Contacto
-            </h3>
-            <div class="contacto-seccion1__ubicacion">
-                <h4>
-                    Ubicación
-                </h4>
-                <div>
-                    <div>
-                        <p>Microcentro, CABA.</p>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13136.54133420984!2d-58.3739421!3d-34.6007392!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd3613f716c54df68!2sDecofresas!5e0!3m2!1ses-419!2sar!4v1674004798218!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
-                    </div>
+            </h1>
+        </div>
+        <div class="container text-center">
+            <h2>Ubicación</h2>
+            <div class="row contacto">
+                <div class="col">
+                    <p>Microcentro, CABA.</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13136.54133420984!2d-58.3739421!3d-34.6007392!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd3613f716c54df68!2sDecofresas!5e0!3m2!1ses-419!2sar!4v1674004798218!5m2!1ses-419!2sar" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+              </div>
+              <div class="col">
+                    <h2>Horario</h2>
                     <table>
-                        <tr>
-                            <th>Horario:</th>
-                        </tr>
-                        <tr>
-                            <td>Lunes</td>
-                            <td>09:00 - 17:00</td>
-                        </tr>
-                        <tr>
-                            <td>Martes
-                            </td>
-                            <td>09:00 - 17:00</td>
-                        </tr>
-                        <tr>
-                            <td>Miércoles</td>
-                            <td>09:00 - 17:00</td>
-                        </tr>
-                        <tr>
-                            <td>Jueves</td>
-                            <td>09:00 - 17:00</td>
-                        </tr>
-                        <tr>
-                            <td>Viernes</td>
-                            <td>09:00 - 17:00</td>
-                        </tr>
-                        <tr>
-                            <td>Sábado</td>
-                            <td>Cerrado</td>
-                        </tr>
-                        <tr>
-                            <td>Sábado</td>
-                            <td>Cerrado</td>
-                        </tr>
+                        <thead>
+                            <tr>
+                                <th>Día</th>
+                                <th>Horario</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Lunes a Viernes</td>
+                                <td>9:00 - 17:00</td>
+                            </tr>
+                            <tr>
+                                <td>Sábados y       Domingos</td>
+                                <td>Cerrado</td>
+                            </tr>
+                        </tbody>
                     </table>
                     <a href="https://wa.me/5491130516222" target="_blank">
-                        <h5>Comunicate con nosotros</h5>
+                        <h3 class="botom-contacto">Comunícate con nosotros</h3>
                     </a>
-                </div>
+              </div>
             </div>
-        </section>
-        <section class="contacto-seccion2">
-            <h4>
-                Trabajá con nosotros
-            </h4>
+        </div>
+        <div class="container text-center">
+            <h2>Trabaja con nosotros</h2>
             <p>Si te interesa formar parte de nuestro equipo, empezá por postularte aquí y adjunta tu CV.</p>
             <div>  
-                <form>
-                    <fieldset class="formulario">
-                        <legend>Completa tus datos</legend>
-                        <div>
-                            <label for="nombre">Nombre:</label>
-                            <input type="text" name="nombre" placeholder="Nombre completo">
+            <div class="row trabajo">
+                <div class="col">
+                    <form>
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                         </div>
-                        <div>
-                            <label for="email">Correo electrónico:</label>
-                            <input type="email" name="email" placeholder="email@gmail.com">
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                         </div>
-                        <div>
-                            <label for="mensaje">Mensaje:</label>
-                            <textarea name="mensaje" placeholder="Mensaje"></textarea>
+                        <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
-                        <div>
-                            <label for="adjunto_cv">Adjuntar CV:</label>
-                            <input type="file" name="adjunto_cv">
+                        <div class="mb-3">
+                            <label for="formFile" class="form-label">Default file input example</label>
+                            <input class="form-control" type="file" id="formFile">
                         </div>
-                        <div>
                             <input type="submit">
                             <input type="reset">
                         </div>
-                    </fieldset>
-                </form>
+                    </form>  
+                    </div>
+                </div>
             </div>
-        </section>
+        </div>
     </main>
-       <!-- pie de pagina -->
-       <footer>
+    <!-- pie de pagina -->
+    <footer>
         <div class="whatsapp">
             <a href="https://wa.me/5491130516222" target="_blank"><img src="../img/wp-logo.png" alt="logo de whatsapp"></a>
         </div>
-        <div id="abajo">
-          <h3 class="abajo__mensaje">© 2023 DecoFresas, todos los derechos reservados.</h3>
-          <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="abajo__logoIG" src="../img/instagram-logo.png" alt="imagen de logo instagram"></a>
-          <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class= "abajo__logoFB" src="../img/facebook-logo.png" alt="imagen de logo facebook"></a> 
-        </div>
-        <div class="volver-arriba">
-            <a href="#arriba">volver arriba</a>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <p>Síguenos en nuestras redes sociales:</p>
+            </div>
+            <div class="col-md-4">
+              <a href="https://www.facebook.com/Decofresas.arg/" target="_blank"><img class="logoFB" src="../img/facebook-logo.png" alt="Logo de Facebook"></a>
+            </div>
+            <div class="col-md-4">
+              <a href="https://www.instagram.com/decofresas.arg/" target="_blank"><img class="logoIG" src="../img/instagram-logo.png" alt="Logo de Instagram"></a>
+            </div>
+          </div>
+          <ul class="menu-footer">
+            <li><a href="../index.html">home</a>
+            </li>
+            <li><a href="../pages/nosotros.html">nosotros</a>
+            </li>
+            <li><a href="../pages/productos.html">productos</a>
+            </li>
+            <li><a href="../pages/galeria.html">galeria</a>
+            </li>
+            <li><a href="../pages/contacto.html">contacto</a>
+            </li>
+        </ul>
         </div>
     </footer>
     <!-- link de mi js -->
