--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="contacto para hacer un pedido">
     <!-- link de tipografía -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap" rel="stylesheet">
     <!-- link de mi bootstrap -->
@@ -87,7 +88,7 @@
               </div>
             </div>
         </div>
-        <div class="container text-center">
+        <div class="container text-center segundo">
             <h2>Trabaja con nosotros</h2>
             <p>Si te interesa formar parte de nuestro equipo, empezá por postularte aquí y adjunta tu CV.</p>
             <div>  
